--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -181,6 +181,21 @@
   </div>
 </template>
 
+<script>
+  var fireballSize = 100;
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
+
+  var getWizardHeight(){return 1.337 * wizardWidth;}
+
+  var getFireballSpeed(left){
+    if (left){
+      return 5;
+    } else {
+      return 2;
+    }
+  }
+</script>
 <script src="js/game.js"></script>
 
 </body>
