--- a/index.html
+++ b/index.html
@@ -182,19 +182,23 @@
 </template>
 
 <script>
-  var fireballSize = 100;
+  var fireballSize = 22;
   var wizardSpeed = 3;
   var wizardWidth = 70;
 
-  var getWizardHeight(){return 1.337 * wizardWidth;}
-
-  var getFireballSpeed(left){
+  var getFireballSpeed = function(left){
     if (left){
       return 5;
     } else {
       return 2;
     }
   }
+
+var getWizardHeight = function(){return 1.337 * wizardWidth;}
+
+function getWizardX(width){return width/2;}
+
+function getWizardY(height){return height*2/3;}
 </script>
 <script src="js/game.js"></script>
 
