--- a/index.html
+++ b/index.html
@@ -196,9 +196,11 @@
 
 var getWizardHeight = function(){return 1.337 * wizardWidth;}
 
-function getWizardX(width){return width/2;}
+function getWizardX(width){return width/2-35;}
 
-function getWizardY(height){return height*2/3;}
+function getWizardY(height){
+var result = height*2/3;
+return height-result-93.6;}
 </script>
 <script src="js/game.js"></script>
 
