--- a/index.html
+++ b/index.html
@@ -196,11 +196,10 @@
 
 var getWizardHeight = function(){return 1.337 * wizardWidth;}
 
-function getWizardX(width){return width/2-35;}
+function getWizardX(width){return width / 2 - wizardWidth / 2;}
 
 function getWizardY(height){
-var result = height*2/3;
-return height-result-93.6;}
+return height - height * 2 / 3 - getWizardHeight(height);}
 </script>
 <script src="js/game.js"></script>
 
