--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ var getWizardHeight = function(){return 1.337 * wizardWidth;}
 function getWizardX(width){return width / 2 - wizardWidth / 2;}
 
 function getWizardY(height){
-return height - height * 2 / 3 - getWizardHeight(height);}
+return height / 3 - getWizardHeight(height);}
 </script>
 <script src="js/game.js"></script>
 
