Revert "some beauty"
This reverts commit a867b3150674cdce5aae5504edef4f26da0c2583.

--- a/index.html
+++ b/index.html
@@ -194,17 +194,12 @@
     }
   }
 
-var getWizardHeight = function(){
-  return 1.337 * wizardWidth;
-}
+var getWizardHeight = function(){return 1.337 * wizardWidth;}
 
-function getWizardX(width){
-  return width / 2 - wizardWidth / 2;
-}
+function getWizardX(width){return width / 2 - wizardWidth / 2;}
 
 function getWizardY(height){
-  return height - height * 2 / 3 - getWizardHeight(height);
-}
+return height - height * 2 / 3 - getWizardHeight(height);}
 </script>
 <script src="js/game.js"></script>
 
