--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@ function getWizardX(width){return width / 2 - wizardWidth / 2;}
 
 function getWizardY(height){
 return height / 3 - getWizardHeight();}
+// git
 </script>
 <script src="js/game.js"></script>
 
